# stock-strategy

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.zh-CN.md  SECURITY.md  compose.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: LICENSE  README.md  pyproject.toml
backend/scripts/: acceptance.py  verify_release_version.py  verify_wheel.py
backend/stock_strategy/: __init__.py  broker.py  cli.py  context.py  custom_indicators.py  data.py  diagnostics.py  doctor.py  errors.py  execution_service.py  experiments.py  futu.py  job_store.py  market_cache.py  models.py  opend.py  paths.py  reporting.py  result_reader.py  runtime.py  stock_api.py  stock_indicators.py  strategy_parameters.py  strategy_repository.py  timeframes.py  web.py  web_models.py
backend/tests/: test_broker.py  test_cli.py  test_data.py  test_demo_strategy.py  test_diagnostics.py  test_experiments.py  test_futu.py  test_market_cache.py  test_opend.py  test_runtime.py  test_stock_compat.py  test_strategy_parameters.py  test_web.py
docs/: ACCEPTANCE_RESULT_2026-07-15.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_2026-07-19.md  ENGINEERING_REFACTOR_ACCEPTANCE_2026-07-18.md  FUTU_COMPATIBILITY.md  FUTU_CONTRACT_V2_ACCEPTANCE_2026-07-18.md  I18N.md  MVP_ACCEPTANCE.md  RELEASE_0.6.md  STRATEGY_ITERATION_ACCEPTANCE_2026-07-18.md  STRATEGY_SIGNAL_QUALITY_2026-07-19.md  WEB_ACCEPTANCE_RESULT_2026-07-18.md
examples/: ma_cross.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  (+2 more)
(+62 files in other folders)
