[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-strategy"
version = "0.5.0"
description = "Local-first Futu OpenD strategy editor and quantitative backtesting workbench"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
opend = ["futu-api>=10.6.6608,<11"]
web = ["fastapi>=0.139,<1", "uvicorn>=0.51,<1"]
test = ["build>=1.3,<2", "httpx2>=2.7,<3"]

[project.scripts]
stock-backtest = "stock_strategy.cli:main"
stock-web = "stock_strategy.web:main"

[tool.setuptools.packages.find]
include = ["stock_strategy*"]

[tool.setuptools.package-data]
stock_strategy = ["web_dist/*", "web_dist/assets/*"]
